force-app/main/default/objects/Product2/fields/Accpac_Item_Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Accpac_Item_Invoice_Frequency__c</fullName>
    <formula>RIGHT(ProductCode, 2)

/*use to filter Opportunity Products by Invoice Frequency*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accpac Item Invoice Frequency</label>
    <type>Text</type>
</CustomField>