force-app/main/default/objects/Product2/fields/Active_Ingredient_percentage__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredient_percentage__c</fullName>
    <label>Active Ingredient %</label>
    <length>15</length>
    <type>Text</type>
</CustomField>