force-app/main/default/objects/Product2/fields/Active_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredients__c</fullName>
    <label>Active Ingredients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abamectin</fullName>
            </value>
            <value>
                <fullName>Beauveria Basiana Strain GHA Spores</fullName>
            </value>
            <value>
                <fullName>Boric Acid</fullName>
            </value>
            <value>
                <fullName>Brodifacoum</fullName>
            </value>
            <value>
                <fullName>Bromadiolone</fullName>
            </value>
            <value>
                <fullName>Clothlanidine</fullName>
            </value>
            <value>
                <fullName>Cyfluthrin</fullName>
            </value>
            <value>
                <fullName>Dichlorvos</fullName>
            </value>
            <value>
                <fullName>Difethiolone</fullName>
            </value>
            <value>
                <fullName>Dinotefuran</fullName>
            </value>
            <value>
                <fullName>Disodium Octaborate</fullName>
            </value>
            <value>
                <fullName>D-Phenothrin</fullName>
            </value>
            <value>
                <fullName>Fipronil</fullName>
            </value>
            <value>
                <fullName>Glyphosate</fullName>
            </value>
            <value>
                <fullName>Hydramethylnon</fullName>
            </value>
            <value>
                <fullName>Imidacloprid</fullName>
            </value>
            <value>
                <fullName>Lambda-Cyhalothrin</fullName>
            </value>
            <value>
                <fullName>Malathion</fullName>
            </value>
            <value>
                <fullName>Methoprene</fullName>
            </value>
            <value>
                <fullName>Permethrin</fullName>
            </value>
            <value>
                <fullName>Propetamphos</fullName>
            </value>
            <value>
                <fullName>Propoxur</fullName>
            </value>
            <value>
                <fullName>Pyrethrins</fullName>
            </value>
            <value>
                <fullName>Silicone Dioxide</fullName>
            </value>
            <value>
                <fullName>S-Metrophene</fullName>
            </value>
            <value>
                <fullName>Spinosad</fullName>
            </value>
            <value>
                <fullName>Sulphur</fullName>
            </value>
            <value>
                <fullName>Tetramethrin</fullName>
            </value>
            <value>
                <fullName>Thiametoxam</fullName>
            </value>
            <value>
                <fullName>Zinc Phosphide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>