force-app/main/default/objects/Product2/fields/Allows_One_Time__c.field-meta.xml
<CustomField>
    <fullName>Allows_One_Time__c</fullName>
    <formula>INCLUDES(Allowable_Frequencies__c, &apos;One-Time&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allows One Time</label>
    <type>Checkbox</type>
</CustomField>