force-app/main/default/objects/Product2/fields/Always_Billable__c.field-meta.xml
<CustomField>
    <fullName>Always_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Citron Custom Field</description>
    <label>Always Billable</label>
    <type>Checkbox</type>
</CustomField>