force-app/main/default/objects/Product2/fields/Available_As_Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Available_As_Related_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available As Related Product</label>
    <type>Checkbox</type>
</CustomField>