force-app/main/default/objects/Product2/fields/Available_on_Log_Infestation__c.field-meta.xml
<CustomField>
    <fullName>Available_on_Log_Infestation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Citron Custom Field</description>
    <label>Available on Log Infestation</label>
    <type>Checkbox</type>
</CustomField>