force-app/main/default/objects/Product2/fields/Clean_Out_Type__c.field-meta.xml
<CustomField>
    <fullName>Clean_Out_Type__c</fullName>
    <label>Clean Out Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ants</fullName>
            </value>
            <value>
                <fullName>Roaches</fullName>
            </value>
            <value>
                <fullName>Rodents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>