force-app/main/default/objects/Product2/fields/CPQ2_Enable_Additional_Pest_Fields__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Enable_Additional_Pest_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To manage UI controls for Pest Services. Note, made it a drop down to account for future scalability as opposed to a checkbox</description>
    <label>Enable Additional Pest Fields</label>
    <type>Checkbox</type>
</CustomField>