force-app/main/default/objects/Product2/fields/CPQ2_Related_Product_Required__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Related_Product_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This control&apos;s if there needs to be a related Product selected when added this Product.</description>
    <label>Is Related Product Required?</label>
    <type>Checkbox</type>
</CustomField>