force-app/main/default/objects/Product2/fields/CPQ_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Cost__c</fullName>
    <label>Material Cost Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>