force-app/main/default/objects/Product2/fields/CPQ_Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Duration_In_Minutes__c</fullName>
    <formula>Service_Work_Type__r.DurationInMinutes</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>