force-app/main/default/objects/Product2/fields/CPQ_Price_Model__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Price_Model__c</fullName>
    <label>Price Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPQ_Price_Model</valueSetName>
    </valueSet>
</CustomField>