force-app/main/default/objects/Product2/fields/DeInstallation_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>DeInstallation_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DeInstallation Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Products (DeInstallation Work Type)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>