force-app/main/default/objects/Product2/fields/Delivery_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>DeliveryProducts</relationshipLabel>
    <relationshipName>DeliveryProducts</relationshipName>
    <type>Lookup</type>
</CustomField>