force-app/main/default/objects/Product2/fields/Display_Frequency_In_Portal__c.field-meta.xml
<CustomField>
    <fullName>Display_Frequency_In_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Frequency In Portal</label>
    <type>Checkbox</type>
</CustomField>