force-app/main/default/objects/Product2/fields/Display_Record_In_Portal__c.field-meta.xml
<CustomField>
    <fullName>Display_Record_In_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Record In Portal</label>
    <type>Checkbox</type>
</CustomField>