force-app/main/default/objects/Product2/fields/Does_not_require_scanning__c.field-meta.xml
<CustomField>
    <fullName>Does_not_require_scanning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether this item requires Scanning by Technician onsite or not</inlineHelpText>
    <label>Does not require scanning</label>
    <type>Checkbox</type>
</CustomField>