force-app/main/default/objects/Product2/fields/English_Description__c.field-meta.xml
<CustomField>
    <fullName>English_Description__c</fullName>
    <label>English Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>