force-app/main/default/objects/Product2/fields/Follow_up_After_N_Days__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_After_N_Days__c</fullName>
    <label>Follow-up After N Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>