force-app/main/default/objects/Product2/fields/French_Description__c.field-meta.xml
<CustomField>
    <fullName>French_Description__c</fullName>
    <label>French Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>