force-app/main/default/objects/Product2/fields/French_Product_Description_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>French_Product_Description_Rich_Text__c</fullName>
    <label>French Product Description (Rich Text)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>