force-app/main/default/objects/Product2/fields/French_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>French_Product_Name__c</fullName>
    <label>French Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>