force-app/main/default/objects/Product2/fields/French_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>French_Short_Description__c</fullName>
    <label>French Short Description</label>
    <type>TextArea</type>
</CustomField>