force-app/main/default/objects/Product2/fields/GL_Title__c.field-meta.xml
<CustomField>
    <fullName>GL_Title__c</fullName>
    <label>GL Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>