force-app/main/default/objects/Product2/fields/Heavy_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heavy Equipment</label>
    <type>Checkbox</type>
</CustomField>