force-app/main/default/objects/Product2/fields/Infestation_Level__c.field-meta.xml
<CustomField>
    <fullName>Infestation_Level__c</fullName>
    <label>Infestation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Actisol</fullName>
            </value>
            <value>
                <fullName>Actisol / Heavy</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Block Inspection</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Chemical / BTOXF</fullName>
            </value>
            <value>
                <fullName>Chemical / Follow Up</fullName>
            </value>
            <value>
                <fullName>Chute</fullName>
            </value>
            <value>
                <fullName>Clean Out</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Common Areas</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>Drill</fullName>
            </value>
            <value>
                <fullName>Exclusion</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Gel / Dust - Block</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Heat</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>High</fullName>
                <isActive>false</isActive>
                <label>High</label>
            </value>
            <value>
                <fullName>IGR</fullName>
            </value>
            <value>
                <fullName>Inclusive Gel/Dust – No Charge</fullName>
            </value>
            <value>
                <fullName>Inclusive Spray – No Charge</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>K9</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>