force-app/main/default/objects/Product2/fields/Installation_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Products (Installation Work Type)</relationshipLabel>
    <relationshipName>InstallationProducts</relationshipName>
    <type>Lookup</type>
</CustomField>