force-app/main/default/objects/Product2/fields/Invoice_French_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_French_Description__c</fullName>
    <label>Invoice French Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>