force-app/main/default/objects/Product2/fields/Is_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Inventory_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates (checked) that this product is an inventory item. This is the ICITEM.STOCKITEM field in Accpac.</description>
    <inlineHelpText>Indicates (checked) that this product is an inventory item. This is the ICITEM.STOCKITEM field in Accpac.</inlineHelpText>
    <label>Is Inventory Item</label>
    <type>Checkbox</type>
</CustomField>