force-app/main/default/objects/Product2/fields/isConsumable__c.field-meta.xml
<CustomField>
    <fullName>isConsumable__c</fullName>
    <formula>Item_Type__c  =  $Setup.Field_Service_Settings__c.Item_Type_for_Consumables__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isConsumable</label>
    <type>Checkbox</type>
</CustomField>