force-app/main/default/objects/Product2/fields/isFullExchange__c.field-meta.xml
<CustomField>
    <fullName>isFullExchange__c</fullName>
    <formula>!ISBLANK(ProductCode)&amp;&amp;CONTAINS($Setup.Field_Service_Settings__c.Full_Exchange_Product_Codes__c, ProductCode+&quot;,&quot;)</formula>
    <label>isFullExchange</label>
    <type>Checkbox</type>
</CustomField>