force-app/main/default/objects/Product2/fields/IsPestService__c.field-meta.xml
<CustomField>
    <fullName>IsPestService__c</fullName>
    <formula>ISPICKVAL(Family,&apos;Pest Control&apos;) &amp;&amp;
(Item_Type__c = &apos;Service&apos;)</formula>
    <label>IsPestService</label>
    <type>Checkbox</type>
</CustomField>