force-app/main/default/objects/Product2/fields/Never_Generate_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Never_Generate_Work_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never Generate Work Order</label>
    <type>Checkbox</type>
</CustomField>