force-app/main/default/objects/Product2/fields/Not_Editable_in_Community__c.field-meta.xml
<CustomField>
    <fullName>Not_Editable_in_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prevents community users from editing frequency and quantity if set to True.</inlineHelpText>
    <label>Not Editable in Community</label>
    <type>Checkbox</type>
</CustomField>