force-app/main/default/objects/Product2/fields/Number_of_Rooms_NA__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms_NA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If TRUE, the &quot;Number of Rooms&quot; portion of the Product Unique Key will not be leveraged to select a Product.</inlineHelpText>
    <label>Number of Rooms NA</label>
    <type>Checkbox</type>
</CustomField>