force-app/main/default/objects/Product2/fields/P_C_P__c.field-meta.xml
<CustomField>
    <fullName>P_C_P__c</fullName>
    <label>P.C.P. #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>