force-app/main/default/objects/Product2/fields/Product_Icon__c.field-meta.xml
<CustomField>
    <fullName>Product_Icon__c</fullName>
    <formula>IMAGE(Product_Image_URL__c, &quot;No Image&quot;, 22, 22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Icon</label>
    <type>Text</type>
</CustomField>