force-app/main/default/objects/Product2/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE(Product_Image_URL__c, &quot;No Image&quot;, 400, 400)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>