force-app/main/default/objects/Product2/fields/Product_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Id__c</fullName>
    <label>Product Image Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>