force-app/main/default/objects/Product2/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <formula>if((Product_Image_Id__c != &apos;&apos; || Product_Image_Id__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/servlet/servlet.FileDownload?file=&apos; + Product_Image_Id__c,&apos;/resource/1489574201000/CitronLogo&apos;)</formula>
    <label>Product Image URL</label>
    <type>Text</type>
</CustomField>