force-app/main/default/objects/Product2/fields/Product_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Unique_Key__c</fullName>
    <label>Product Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>