force-app/main/default/objects/Product2/fields/Remove_Installation_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Remove_Installation_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Work Orders of Type &quot;Replace&quot; will inherit skill requirements and duration from this work type.</inlineHelpText>
    <label>Remove/Installation Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Products (Remove/Installation Work Type)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>