force-app/main/default/objects/Product2/fields/Repair_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Repair_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Products (Repair Work Type)</relationshipLabel>
    <relationshipName>RepairProducts</relationshipName>
    <type>Lookup</type>
</CustomField>