force-app/main/default/objects/Product2/fields/Service_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Products (Service Work Type)</relationshipLabel>
    <relationshipName>ServiceProducts</relationshipName>
    <type>Lookup</type>
</CustomField>