force-app/main/default/objects/Product2/fields/T_C_CCMP__c.field-meta.xml
<CustomField>
    <fullName>T_C_CCMP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>new item code called CCMP (Citron Comprehensive Maintenance Program) for customers who are paying a monthly recurring charge to access our chemical services.</description>
    <inlineHelpText>Include Terms and Conditions during Quote Generation for this Product</inlineHelpText>
    <label>T&amp;C CCMP</label>
    <type>Checkbox</type>
</CustomField>