force-app/main/default/objects/Product2/fields/T_C_Equipment_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>T_C_Equipment_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include Equipment Maintenance Terms and Conditions during Quote Generation for this Product</inlineHelpText>
    <label>T&amp;C Equipment Maintenance</label>
    <type>Checkbox</type>
</CustomField>