force-app/main/default/objects/Product2/fields/T_C_Equipment_Rental_Washroom_Auto__c.field-meta.xml
<CustomField>
    <fullName>T_C_Equipment_Rental_Washroom_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include Equipment Rental (Washroom Automation &amp; First Aid) Terms and Conditions during Quote Generation for this Product</inlineHelpText>
    <label>T&amp;C Equipment Rental (Washroom Auto)</label>
    <type>Checkbox</type>
</CustomField>