force-app/main/default/objects/Product2/fields/T_C_Hygiene_Service_Continued__c.field-meta.xml
<CustomField>
    <fullName>T_C_Hygiene_Service_Continued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>T&amp;C Hygiene Service Continued created  as a part of the Trello request &quot;Add New T&amp;C When Jade Consumable Service Contract is Quoted&quot;</description>
    <label>T&amp;C Hygiene Service Continued</label>
    <type>Checkbox</type>
</CustomField>