force-app/main/default/objects/Product2/fields/T_C_Hygiene_Services__c.field-meta.xml
<CustomField>
    <fullName>T_C_Hygiene_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include Hygiene Services Terms and Conditions during Quote Generation for this Product</inlineHelpText>
    <label>T&amp;C Hygiene Services</label>
    <type>Checkbox</type>
</CustomField>