force-app/main/default/objects/Product2/fields/T_C_Pest_Control_Service__c.field-meta.xml
<CustomField>
    <fullName>T_C_Pest_Control_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include Pest Control Service Terms and Conditions during Quote Generation for this Product</inlineHelpText>
    <label>T&amp;C Pest Control Service</label>
    <type>Checkbox</type>
</CustomField>