force-app/main/default/objects/Product2/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <label>Treatment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Bats</fullName>
            </value>
            <value>
                <fullName>Beavers</fullName>
            </value>
            <value>
                <fullName>Bed Bug</fullName>
            </value>
            <value>
                <fullName>Beetle</fullName>
            </value>
            <value>
                <fullName>Birds</fullName>
            </value>
            <value>
                <fullName>Black Field Ant</fullName>
            </value>
            <value>
                <fullName>Carpenter Ant</fullName>
            </value>
            <value>
                <fullName>Carpet Beetle</fullName>
            </value>
            <value>
                <fullName>Centipede/Millipede</fullName>
            </value>
            <value>
                <fullName>Clothes Moth</fullName>
            </value>
            <value>
                <fullName>Clover Mite</fullName>
            </value>
            <value>
                <fullName>Cluster Fly</fullName>
            </value>
            <value>
                <fullName>Cockroach</fullName>
            </value>
            <value>
                <fullName>Coyotes</fullName>
            </value>
            <value>
                <fullName>Drain Fly</fullName>
            </value>
            <value>
                <fullName>Earwig</fullName>
            </value>
            <value>
                <fullName>Fleas</fullName>
            </value>
            <value>
                <fullName>Fruit Fly</fullName>
            </value>
            <value>
                <fullName>Grasshopper/Cricket</fullName>
            </value>
            <value>
                <fullName>Groundhogs</fullName>
            </value>
            <value>
                <fullName>House Fly</fullName>
            </value>
            <value>
                <fullName>Indian Meal Moths</fullName>
            </value>
            <value>
                <fullName>Insects</fullName>
            </value>
            <value>
                <fullName>Mice</fullName>
            </value>
            <value>
                <fullName>Mite</fullName>
            </value>
            <value>
                <fullName>Moles</fullName>
            </value>
            <value>
                <fullName>Mosquito</fullName>
            </value>
            <value>
                <fullName>Moth</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>