force-app/main/default/objects/Product2/fields/U_P_C__c.field-meta.xml
<CustomField>
    <fullName>U_P_C__c</fullName>
    <label>U.P.C.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>